--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -21,6 +21,7 @@
 \newacronym{LASSO}{LASSO}{least absolute shrinkage and selection operator}
 \newacronym{LRT}{LRT}{likelihood ratio test}
 \newacronym{MPCC}{MPCC}{multi-phase cycle coding}
+\newacronym{LED}{LED}{light-emitting diodes}
 
 \newglossaryentry{neuron}{
 	name = neuron,
