--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -442,6 +442,28 @@ Visual stimuli section
 	url = {http://www.hindawi.com/journals/cin/2011/364385/cta/}
 }
 
+@article{harmonic_imrpovement,
+	title = {Steady-state visual evoked potential ({SSVEP})-based communication: impact of harmonic frequency components},
+	author = {Gernot R. Müller-Putz and Reinhold Scherer and Christian Brauneis and Gert Pfurtscheller},
+	journal = {Journal of Neural Engineering},
+	volume = {2},
+	number = {4},
+	pages = {123--130},
+	url = {http://iopscience.iop.org.ezproxy.utlib.ee/1741-2552/2/4/008/pdf/1741-2552_2_4_008.pdf},
+	year = {2005}
+}
+
+@article{ssvep_response,
+	title = {Human {EEG} responses to 1–100 {Hz} flicker: resonance phenomena in visual cortex and their potential correlation to cognitive phenomena},
+	author = {Christoph S. Herrmann},
+	year = {2001}
+	journal = {Experimental Brain Research},
+	volume = {137},
+	number = {3-4},
+	pages = {346--353},
+	url = {http://cognitrn.psych.indiana.edu/busey/N611Q700/Week1103/Herrman1-100Hz.pdf}
+}
+
 PSDA section
 
 CCA section
