Improve Fourier analysis section. Add frequency bin and Nyguist frequency text.

--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -66,15 +66,25 @@ As discussed in the previous section, the flickering of a target can produce dif
 
 The following paragraph is based on the book by Hartmann~\cite{pure_tone}. The simpler trigonometric functions that a signal is decomposed into are pure tones---the waveforms that contain only one frequency. All other waveforms have at least two frequencies. Pure tone waveforms are sine and cosine waves. Important property of a pure tone is that linear operations do not change the shape of the pure tone waveform.
 
-The pure tones are used to represent all possible frequencies that a signal may contain. The decomposition process of a signal is called Fourier transform and it is used to decompose a function of time into frequencies or pure tones that make it up. The function of time can be for example the \gls{EEG} recording represented as voltage versus time or the target flickering represented as state versus time. Fourier transform converts signal from time domain or the function of time to frequency domain or the function of frequency. The representation of a time-domain signal in a frequency domain is called frequency spectrum. Frequency spectrum contains information about amplitude and phase of different frequencies. Therefore, frequency spectrum can be presented as a function of frequency versus amplitude and phase.
+The pure tones are used to represent all possible frequencies that a signal may contain. The decomposition process of a signal is called Fourier transform and it is used to decompose a function of time into pure tones or frequency components that make it up. The function of time can be for example the \gls{EEG} recording represented as voltage versus time or the target flickering represented as state versus time. Fourier transform converts signal from time domain or the function of time to frequency domain or the function of frequency. The representation of a time-domain signal in a frequency domain is called frequency spectrum. Frequency spectrum contains information about amplitude and phase of different frequencies. Therefore, frequency spectrum can be presented as a function of frequency versus amplitude and phase.
 
-To represent both amplitude and phase, complex numbers are used. Complex numbers can be represented as a pair of real numbers and therefore complex numbers can be used to represent two values. The amplitude and phase do not correspond to the real and imaginary part of the complex number but rather to the absolute value or the modulus and phase of the complex number. In this thesis the phase information from the frequency spectrum is not used. There are, however, \glspl{BCI} that also use phase information~\cite{MPCC}. Since only the information about amplitude is required in this thesis, it is possible to convert the frequency spectrum into power spectral density, which is represented as a function of amplitude squared or power versus frequency.
+To represent both amplitude and phase, complex numbers are used. Complex numbers can be represented as a pair of real numbers and therefore complex numbers can be used to represent two values. The amplitude and phase do not correspond to the real and imaginary part of the complex number but rather are related to the absolute value or the modulus and phase of the complex number. In this thesis the phase information from the frequency spectrum is not used. There are, however, \glspl{BCI} that also use phase information~\cite{MPCC}. Since only the information about amplitude is required in this thesis, it is possible to convert the frequency spectrum into power spectral density, which is represented as a function of amplitude squared or power versus frequency.
 
 To conclude previous discussion, the amount of frequency $f$ present in a signal can be calculated by first calculating the frequency spectrum with Fourier transform and then taking modulus squared of the frequency spectrum's value at frequency $f$.
 
-In digital devices, however, theoretical power spectral density cannot be calculated. The measurement period would have to be infinitely long to a acquire the true power spectral density~\gls{psd}. Therefore, power spectral estimation is used. The modulus squared of frequency spectrum in a real-world application is called periodogram and it is the estimation of the power spectral density. There are other spectral estimation methods available.
+In digital devices, however, theoretical power spectral density cannot be calculated. The measurement period would have to be infinitely long to a acquire the true power spectral density~\cite{psd}. Therefore, power spectral estimation is used. The modulus squared of frequency spectrum in a real-world application is called periodogram and it is the estimation of the power spectral density. There are other spectral estimation methods available.
 
-Since digital devices work with discrete signals as discussed in section~\ref{sec:EEG_comparison}, in real-world application discrete version of the Fourier transform is used. The algorithm used to compute the discrete Fourier transform is called \gls{FFT}. The higher the sampling rate and \gls{ADC} resolution of a recording device, the more accurate the recording and therefore the more accurate the frequency spectrum and the periodogram of the signal. Thus higher sampling rate and \gls{ADC} resolution lead to more accurate \gls{SSVEP} detection.
+Since digital devices work with discrete signals as discussed in section~\ref{sec:EEG_comparison}, in a real-world application discrete version of the Fourier transform is used. The algorithm used to compute the discrete Fourier transform is called \gls{FFT}. The frequency spectrum calculated by \gls{FFT} is discrete---if the discrete real-valued input signal, as is the case with \gls{EEG} recording, has $N$ values then the output has $\frac{N}{2}$ values. This derives from the definition and symmetric property of the discrete Fourier transform. %The higher the sampling rate and \gls{ADC} resolution of a recording device, the more accurate the recording and therefore the more accurate the frequency spectrum and the periodogram of the signal.
+
+The signal that is recorded, however, may contain frequencies that are too high to be detected from the discrete signal. Theoretically, the sampling rate of the device has to be more than two times higher than the highest frequency in the signal to reconstruct the continuous signal from the discrete signal or to decompose the signal into frequency components. When looking it from different angle, the highest frequency that can be detected with a sampling rate of $f$ is $\frac{2}{f}$ and it is called Nyguist frequency. But since real-world application are imperfect, even higher sampling rate are needed.
+
+To conclude previous discussion, the frequency spectrum calculated by \gls{FFT} from real-valued time-domain signal with $N$ values is defined at frequencies $\frac{1}{N}, \frac{2}{N}, \dots\frac{f}{2N}$. These frequencies are also called frequency bins. The length of a frequency spectrum depends on the length of the signal from which it is calculated. The longer the signal, the more frequency bins will be acquired.
+
+Thus a time-domain signal can be decomposed into pure tones or sine and cosine waves using \gls{FFT}. \gls{FFT} calculates the frequency spectrum of a time-domain signal. Frequency spectrum can be converted to the estimation of power spectral density which contains only the information about the amplitude of the pure tones. This knowledge can be used to detect \glspl{SSVEP} in \gls{EEG} recording.
+
+%As already discussed in section~\ref{sec:EEG_comparison}, Emotiv EPOC has high internal sampling rate to filter out high frequencies
+
+%Thus higher sampling rate and \gls{ADC} resolution lead to more accurate \gls{SSVEP} detection.
 
 \subsection{Decomposition of target flickering}
 
