--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -203,7 +203,7 @@ The table~\ref{tab:EEG} shows comparison of different \gls{EEG} devices. Devices
 	\label{tab:EEG}
 \end{table}
 
-From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Furthermore, Emotiv EPOC is wireless. Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations: AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure~\ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit. High internal \gls{sampling rate} is used to remove artefacts from the signal. The signal is filtered and transmitted to wireless receiver with reduced \gls{sampling rate} of \SI{128}{Hz}.
+From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Furthermore, Emotiv EPOC is wireless. Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations: AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure~\ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit. High internal \gls{sampling rate} is used to remove high frequency artefacts from the signal. The signal is filtered and transmitted to wireless receiver with reduced \gls{sampling rate} of \SI{128}{Hz}.
 
 \begin{figure}[h]
 	\centering
