--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -456,7 +456,7 @@ Visual stimuli section
 @article{ssvep_response,
 	title = {Human {EEG} responses to 1–100 {Hz} flicker: resonance phenomena in visual cortex and their potential correlation to cognitive phenomena},
 	author = {Christoph S. Herrmann},
-	year = {2001}
+	year = {2001},
 	journal = {Experimental Brain Research},
 	volume = {137},
 	number = {3-4},
